# minigpt

./: .gitignore  README.md  pyproject.toml  requirements.txt  tmp_char.pkl
configs/: train_byte.py  train_char.py  train_shakespeare_byte.py  train_shakespeare_char.py  train_smoke_run.py
data/shakespeare_byte/: meta.pkl
data/shakespeare_char/: meta.pkl
data/tiny_text/: input.txt  meta.pkl  prepare.py
minigpt/: __main__.py  cli.py  dataset.py  model.py  runs.py  tokenizer.py
minigpt/tokenizers/: __init__.py  base.py  byte_tokenizer.py  char_tokenizer.py  factory.py
outputs/: bigram.pt  gpt.pt  gpt_byte.pt  gpt_char.pt
results/: loss.csv  loss_byte.csv  loss_char.csv  loss_shakespeare_byte.csv  loss_shakespeare_char.csv
scripts/: console.py  eval.py  plot_loss.py  prepare_data.py  sample.py  train.py
tests/: test_cli.py  test_eval_outputs.py  test_package_cli.py  test_prepare_data.py  test_runs.py  test_tokenizers.py  test_train_run.py
