[project]
name = "minigpt"
version = "0.1.0"
description = "A small GPT training and experimentation framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "datasets",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
minigpt = "minigpt.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"